--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                                 <td colspan="2">Change Password</td>
                             </tr>
                             <tr>
-                                <td width="40%"><label>Current Password</label></td>
-                                <td width="60%"><input type="password" name="currentPassword" class="txtField"/><span id="currentPassword"  class="required"></span></td>
+                                <td><label>Current Password</label></td>
+                                <td><input type="password" name="currentPassword" class="txtField"/><span id="currentPassword"  class="required"></span></td>
                             </tr>
                             <tr>
                                 <td><label>New Password</label></td>
@@ -47,7 +47,7 @@
                                 <td><input type="password" name="confirmPassword" class="txtField"/><span id="confirmPassword" class="required"></span></td>
                                 </tr>
                             <tr>
-                                <td colspan="2"><input type="submit" name="submit" value="Submit" class="btnSubmit"></td>
+                                <td colspan="2"><input type="submit" name="submit" value="Submit" class="submitbtn"></td>
                             </tr>
                         </table>
                     </div>
