--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="popuptext" id="myPopup">
                 <form name="frmChange" method="post" action="" onSubmit="return validatePassword()">
                     <div style="width:500px;">
-                    <div class="message"><?php if(isset($message)) { echo $message; } ?></div>
+                    <div class="message"><?php if(isset($message)) { echo $message; } ?>
                         <table border="0" cellpadding="10" cellspacing="0" width="500" align="center" class="tblSaveForm">
                             <tr class="tableheader">
                                 <td colspan="2">Change Password</td>
@@ -43,9 +43,10 @@
                                 <td><label>New Password</label></td>
                                 <td><input type="password" name="newPassword" class="txtField"/><span id="newPassword" class="required"></span></td>
                             </tr>
+                            <tr>
                                 <td><label>Confirm Password</label></td>
                                 <td><input type="password" name="confirmPassword" class="txtField"/><span id="confirmPassword" class="required"></span></td>
-                                </tr>
+                            </tr>
                             <tr>
                                 <td colspan="2"><input type="submit" name="submit" value="Submit" class="submitbtn"></td>
                             </tr>
