--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <input type="text" name="fname" value = "Nipun"> <br><br>
             <label>Last Name</label><br>
             <input type="text" name="lname" value="Pramuditha"><br><br>
-            <label>Emai:</label><br>
-            <input type="text" name="email" value="nipun1969@gmail.com"><br><br>
+            <label>Email</label><br>
+            <input type="text" name="email" value="nipun1969@gmail.com" readonly id='email'><br><br>
             <label>Contact Number</label><br>
             <input type="text" name="contactNumber" value="+94778338018"><br><br>
             <button name="done", class="donebtn floated" style="width:50%" >Done</button>
@@ -29,7 +29,6 @@
             <button class='changebtn'>Change Password</button>
             <span class="popuptext" id="myPopup">
                 <form name="frmChange" method="post" action="" onSubmit="return validatePassword()">
-                    <div style="width:500px;">
                     <div class="message"><?php if(isset($message)) { echo $message; } ?>
                         <table border="0" cellpadding="10" cellspacing="0" width="500" align="center" class="tblSaveForm">
                             <tr class="tableheader">
@@ -52,7 +51,7 @@
                             </tr>
                         </table>
                     </div>
-                    </form>
+                </form>
             </span>
         </div>
         
